1) fixes positioning of screen frames to always match AR frame position sent in, regardless of window size or target size (adds an API to retrieve target size from object XML). Parses and encodes touchOffset as a percentage to send and receive correct positions. 2) Allows multiple visible screens at the same time by ignoring socket messages whose targetScreen is different. 3) Fixes objectsPath for server utilities functions. 4) Stores targetSize as new Object property. 5) Updates decompress-zip to newer npm version to fix crash on uploading a target zip. 6) Fixes bug where could not delete frames from web frontend.

--- a/hardwareInterfaces/screens/public/index.css
+++ b/hardwareInterfaces/screens/public/index.css
@@ -217,6 +217,7 @@ body {
     display: inline;
     /*opacity: 1.0;*/
     transform-origin: left top;
+    /*transform-origin: center center;*/
 }
 
 .arFrame {
@@ -237,7 +238,7 @@ body, html {
     height: 100%;
 
     /* Center and scale the image nicely */
-    background-position: center;
+    background-position: left top;
     background-repeat: no-repeat;
     background-size: cover;
 }
